# EPI-governance

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
contracts/ethereum/: EPIOracle.sol  Governance.sol  hardhat.config.js
contracts/ethereum/scripts/: deploy.js
contracts/ethereum/test/: Governance.test.js
contracts/solana/: Anchor.toml
contracts/solana/programs/governance/: Cargo.toml
contracts/solana/programs/governance/src/: lib.rs
docs/: EPI_derivation.md
examples/: execai_demo.py
src/: __init__.py  conftest.py
src/ai_c_suite/: __init__.py  ceo_ai_stub.py  cfo_ai_stub.py
src/ai_c_suite/tests/: __init__.py  test_ai_agents.py
src/api/: __init__.py  main.py
src/epi/: __init__.py  calculator.py  trust_accumulator.py
src/epi/tests/: test_epi.py
src/policy_engine/: __init__.py  logger.py  validator.py
src/policy_engine/tests/: __init__.py  test_policy_engine.py
